tests/baselines/reference/ClassDeclaration9.errors.txt
==== tests/cases/compiler/ClassDeclaration9.ts (1 errors) ====
    class C {
       foo();
       ~~~
!!! ClassDeclaration9.ts(2,4): error TS2238: Function implementation expected.
    }